model restructuring done
